Plans: Prevent Payment link from truncating
What is this terrible black magic? Looks like I need to polish up my
flex-box foo.

Props @iamtakashi.

--- a/client/my-sites/plans/current-plan/style.scss
+++ b/client/my-sites/plans/current-plan/style.scss
@@ -106,7 +106,7 @@
 	}
 
 	.button.is-compact {
-		white-space: pre;
+		flex-shrink: 0;
 	}
 }
 
